[workspace]
members = ["jupiter-core"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "*"
anchor-syn = "*"
solana-sdk = "*"
solana-client = "*"
solana-account-decoder = "*"
solana-program-test = "*"
tokio = { version = "*", features = ["full"] }

anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "26c04a10d20509f360ab176d003bea4c625b16f2" }
jupiter-amm-interface = "*"

# SPL
spl-token = { version = "*", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "*", features = ["no-entrypoint"] }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "79a575fb7af56d26deeda94fef8f55bde7a90df3", features = [
    "no-entrypoint",
] }
